# FaceSDK

./: CMakeLists.txt  LICENSE  README.md  build.sh  test_so.py
demo/: CMakeLists.txt  build.sh  demo.cpp
include/: face_feature.h  face_sdk.h
models/recognition/: model.param
src/: face_detector.cpp  face_feature.cpp  face_sdk.cpp
